refactor: fix IntelliJ warnings, refs #8